# codebase-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  models.py
app/agent/: loop.py
app/api/: main.py  routes.py  schemas.py  server.py  state.py
app/eval/: harness.py  sample_cases.json
app/indexing/: chunker.py  embedder.py  parser.py  pipeline.py  vector_store.py
app/llm/: client.py  prompts.py
app/retrieval/: retriever.py
app/tools/: base.py  composed.py  dependency_graph.py  open_file.py  run_tests.py  search_code.py  static_analysis.py
cli/: main.py
extension/: package.json
extension/src/: extension.ts
scripts/: setup.sh
test/: pyvenv.cfg
test/Scripts/: activate  activate.bat
tests/: conftest.py  test_agent.py  test_chunker.py  test_tools.py
