[project]
name = "codebase-copilot"
version = "0.1.0"
description = "Local AI copilot that understands your GitHub repository"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Codebase Copilot Contributors" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "ollama>=0.4.0",
    "chromadb>=0.5.5",
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.10.2",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "watchfiles>=0.24.0",
    "GitPython>=3.1.43",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "networkx>=3.3",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
copilot = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]